fixed layout bug

--- a/src/components/elements/FindFood/popup.module.scss
+++ b/src/components/elements/FindFood/popup.module.scss
@@ -11,11 +11,10 @@
   background: $white-color;
   border-radius: 8px;
 
-  min-width: 199px;
+  min-width: $input-min-width;
   width: calc(100% - 199px - 16px - 48px);
 
   box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, .15);
-  border: 2px solid transparent;
 
   transition: all $transition-short ease;
 
@@ -24,12 +23,12 @@
   }
 
   &:focus {
-    border: 2px solid rgba(255, 116, 116, 0.5647058824);
+    box-shadow: 5px 5px 5px 0 rgba(255, 116, 116, 0.5647058824);
   }
 
   &__item {
     &__active {
-      color: $base-color;
+      color: #ff7474;
 
       transition: all $transition-short ease;
     }
@@ -50,7 +49,7 @@
     cursor: pointer;
 
     &:hover {
-      color: $base-color;
+      color: #ff7474;
 
       transition: all $transition-short ease;
     }
@@ -63,6 +62,6 @@
 
 @media(max-width:555px) {
   .popup {
-    width: 100%;
+    width: calc(100% - 48px);
   }
 }
